# Hierarchical-DLP

./: .gitignore  DIAGNOSTIC_SUMMARY.md  HRM DLP Project Overview.md  ISSUE_RESOLVED.md  SOLUTION_SUMMARY.md  advanced_calibration.py  anthropic-batches.json  benchmark_test.py  calibrate_model.py  compare_labeling_approaches.py  comparison_report_demo.json  config_dlp_training.json  contextual_label_strategy.py  data-set-generation.md  debug_data.py  demonstrate_contextual_value.py  diagnose_data_labels.py  diagnose_model.py  expected_llm_output_example.json  final_calibrated_test.py  generate_contextual_labels.py  generate_llm_labels.py  generate_missing_labels.py  investigate_data_structure.py  llm_api_integration.py  llm_label_strategy.py  llm_vs_rule_comparison.json  msgbatch_01DHhh1rGk3qxqHREGv3JBRx.json  openai-batches.json  production_calibration.py  pyproject.toml  quick_test.py  retrain_with_labels.sh  retrieve-batches.py  run_full_llm_labeling.sh  run_training.sh  setup_llm_labeling.md  temperature_calibration.py  test_model.py  test_schema_fix.py  (+3 more)
HRM/: .gitignore  openai-batches.json  recover_train_batch.py  train_hrm_dlp_final.py
config/: base.yaml  dlp.yaml  hrm.yaml  hrm_dlp_training.yaml
dataset_generation/: __init__.py  agentic_data_generator.py  batch_monitor.py  batch_tracker.py  business_context.py  debug_startup.py  llm_data_generator.py  make_synth_data.py  process_completed_batches.py  recover_checkpoint_data.py  retrieve_batch_results.py  semantic_obfuscation.py  task_dashboard.py  validate_structured_output.py
dlp/: __init__.py
(+426 files in other folders)
