[project]
name = "hrm-dlp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.64.0",
    "fireworks-ai>=0.17.16",
    "openai>=1.100.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "together>=1.5.25",
    "torch>=2.8.0",
    "wandb>=0.21.1",
]
