[project]
name = "hrm-dlp"
version = "0.1.0"
description = "Hierarchical Reasoning Model adapted for Data Loss Prevention"
requires-python = ">=3.10"
dependencies = [
    # Core ML dependencies
    "torch>=2.0.0",
    "numpy>=1.21.0",
    
    # Training and optimization
    "adam-atan2-pytorch>=0.0.5",
    "einops>=0.6.0",
    "tqdm>=4.64.0",
    
    # Configuration and utilities
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pydantic>=1.10.0",
    "argdantic>=0.2.0",
    "coolname>=2.2.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0",
    "sentencepiece>=0.1.99",
    
    # ML/AI APIs
    "anthropic>=0.64.0",
    "openai>=1.100.0",
    "fireworks-ai>=0.17.16",
    "together>=1.5.25",
    "huggingface_hub>=0.20.0",
    
    # Monitoring and logging
    "wandb>=0.21.1",
    "rich>=14.1.0",
    
    # Testing and evaluation
    "scikit-learn>=1.3.0",
    "pytest>=7.0.0",
    
    # Optional ML dependencies
    "flash-attn>=2.0.0; sys_platform != 'darwin'",  # Skip on macOS
]
